<resources>
    <string name="app_name">OnePlusPlusLauncher</string>
    <string name="xposed_desc">Enhanced OnePlus Launcher with auto focus search, enter key app launching, global search redirect, and fuzzy search features</string>
    <string name="about_module">This module is made by YukiHookAPI. \nLearn more https://github.com/HighCapable/YuKiHookAPI</string>
    <string name="module_version">Module Version: %s</string>
    <string name="module_not_activated">Not Activated</string>
    <string name="module_is_activated">Activated</string>

    <string name="pref_fuzzy_search_title">Use Fuzzy Search Algorithm</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_auto_focus_search_swipe_title">Auto Focus on Swipe Up</string>
    <string name="pref_auto_focus_search_redirect_title">Auto Focus on Search Button Redirect</string>
    <string name="pref_auto_focus_swipe_down_redirect_title">Auto Focus on Swipe Down Redirect</string>
    <string name="pref_enter_key_launch_title">Launch App on Enter</string>
    <string name="pref_global_search_redirect_title">Redirect Global Search Button</string>
    <string name="pref_swipe_down_search_redirect_title">Redirect Swipe Down Search</string>
    <string name="pref_left_swipe_discover_redirect_title">Redirect Left Swipe (Google Discover)</string>
    <string name="pref_auto_focus_left_swipe_redirect_title">Auto Focus on Left Swipe Redirect</string>
    <string name="pref_limit_two_rows_search_title">Show 2-Row Results</string>
    <string name="pref_search_history_recency_title">Search History: Sort by Recent</string>
    <string name="pref_search_history_frequency_title">Search History: Sort by Frequency</string>
    <string name="feature_settings">Feature settings</string>
    <string name="category_search_enhancement">Search Enhancement</string>
    <string name="category_auto_focus">Auto Focus (Show Keyboard)</string>
    <string name="category_search_redirect">Search Redirect (to app drawer)</string>
    <string name="supported_launcher_version">Supported Launcher Version: %s</string>
</resources>