<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity"
    tools:ignore="UselessParent,UseCompoundDrawables,ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:gravity="center|start"
        android:paddingLeft="15dp"
        android:paddingTop="22dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/colorTextGray"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/github_link"
            style="?android:attr/selectableItemBackgroundBorderless"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.85"
            android:src="@mipmap/ic_github"
            android:tint="@color/colorTextGray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_lin_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_dark_round"
        android:elevation="0dp"
        android:gravity="center">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/main_img_status"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            android:src="@mipmap/ic_warn"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/main_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/module_not_activated"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/module_version"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/main_text_version2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:alpha="0.8"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/supported_launcher_version"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fadingEdgeLength="10dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_permotion_round"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="8dp"
                        android:src="@mipmap/ic_home"
                        android:alpha="0.6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:singleLine="true"
                        android:text="@string/feature_settings"
                        android:textColor="@color/colorTextGray"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pref_language_title"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/language_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/fuzzy_search_switch_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_fuzzy_search_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/enter_key_launch_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_enter_key_launch_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/colorTextGray"
                    android:alpha="0.2" />

                <!-- Auto Focus Category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="8dp"
                        android:src="@mipmap/ic_home"
                        android:alpha="0.6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:singleLine="true"
                        android:text="@string/category_auto_focus"
                        android:textColor="@color/colorTextGray"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/auto_focus_search_swipe_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_auto_focus_search_swipe_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/colorTextGray"
                    android:alpha="0.2" />

                <!-- Search Redirect Category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginEnd="8dp"
                        android:src="@mipmap/ic_home"
                        android:alpha="0.6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:singleLine="true"
                        android:text="@string/category_search_redirect"
                        android:textColor="@color/colorTextGray"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/global_search_redirect_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_global_search_redirect_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/auto_focus_search_redirect_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_auto_focus_search_redirect_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/swipe_down_search_redirect_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_swipe_down_search_redirect_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/auto_focus_swipe_down_redirect_switch" 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" 
                    android:text="@string/pref_auto_focus_swipe_down_redirect_title" 
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/left_swipe_discover_redirect_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_left_swipe_discover_redirect_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

                <com.wizpizz.onepluspluslauncher.ui.view.MaterialSwitch
                    android:id="@+id/auto_focus_left_swipe_redirect_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_auto_focus_left_swipe_redirect_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextGray"
                    android:textSize="15sp"
                    android:maxLines="3"
                    android:lineSpacingExtra="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_permotion_round"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/ic_yukihookapi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:lineSpacingExtra="6dp"
                    android:maxLines="2"
                    android:text="@string/about_module"
                    android:textColor="@color/colorTextGray"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>